--- a/RoboIASearch/appsettings.json
+++ b/RoboIASearch/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -10,9 +10,7 @@
   "WorkerConfig": {
     "ApiKey": "...",
     "Endpoint": "...",
-    "Output" : "C:\\IAAnalises" ,
-    "Microservicos": [
-      "..."
-    ]
+    "Output": "C:\\IAAnalises",
+    "Microservicos": [""]
   }
 }
